[project]
name = "nldate"
version = "0.1.0"
description = "A small natural-language date parser."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
exclude = ["dsc190_a5"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
